--- a/wercker.yml
+++ b/wercker.yml
@@ -8,6 +8,6 @@ build:
         image-name: test
         username: $USERNAME
         password: $PASSWORD
-        registry: https://hub.docker.com
+        registry: https://hub.docker.com/r
         repository: $USERNAME/test
         tag: latest
