--- a/wercker.yml
+++ b/wercker.yml
@@ -1,12 +1,14 @@
 box: node:latest
-workdir:
-  steps:
-    # Set wordir
-    - WORKDIR /app
-    # Copy src to workdir
-    - COPY . /app/
 build:
   steps:
+    # Set wordir
+    - script:
+        name: set workdir
+        code: WORKDIR /app
+    # Copy src to workdir
+    - script:
+        name: copy src to workdir
+        code: COPY . /app/
     # Install latest npm version
     - script:
         name: install latest npm version
