--- a/wercker.yml
+++ b/wercker.yml
@@ -16,7 +16,7 @@ build:
     # Serve application
     - script:
         name: serve app
-        code: ng serve --host 0.0.0.0 --port 8081 &
+        code: ng serve --host 0.0.0.0 --port 8081
     # Expose port
     - script:
         name: expose port
