--- a/wercker.yml
+++ b/wercker.yml
@@ -18,9 +18,9 @@ build:
         name: serve app
         code: ng serve --host 0.0.0.0 --port 8081 &
     # Expose port
-    - script:
-        name: expose port
-        code: EXPOSE 8081
+    #- script:
+    #    name: expose port
+    #    code: EXPOSE 8081
     # Push to public docker repo
     - internal/docker-push: 
         username: $USERNAME
