--- a/wercker.yml
+++ b/wercker.yml
@@ -12,10 +12,12 @@ build:
     # Install npm dependencies
     - script:
         name: install npm dependencies
+        cwd: /pipeline/source
         code: npm install --unsafe-perm
     # Serve application
     - script:
         name: serve app
+        cwd: /pipeline/source
         code: ng serve --host 0.0.0.0 --port 8081 &
     # Expose port
     #- script:
