--- a/wercker.yml
+++ b/wercker.yml
@@ -12,17 +12,15 @@ build:
     # Install npm dependencies
     - script:
         name: install npm dependencies
-        cwd: /pipeline/source
         code: npm install --unsafe-perm
+    # Enter source directory
+    - script:
+        name: cd source
+        code: cd /pipeline/source
     # Serve application
     - script:
         name: serve app
-        cwd: /pipeline/source
         code: ng serve --host 0.0.0.0 --port 8081 &
-    # Expose port
-    #- script:
-    #    name: expose port
-    #    code: EXPOSE 8081
     # Push to public docker repo
     - internal/docker-push: 
         username: $USERNAME
