--- a/wercker.yml
+++ b/wercker.yml
@@ -14,11 +14,16 @@ build:
         name: install npm dependencies
         code: npm install --unsafe-perm
     # Serve application
-    - script:
-        name: serve app
-        code: |
-          cd /pipeline/source
-          ng serve --host 0.0.0.0 --port 8081 &
+    - internal/shell:
+      cmd: /bin/bash 
+      code: |
+        cd /pipeline/source
+        ng serve --host 0.0.0.0 --port 8081 &
+    #- script:
+    #    name: serve app
+    #    code: |
+    #      cd /pipeline/source
+    #      ng serve --host 0.0.0.0 --port 8081 &
     # Push to public docker repo
     - internal/docker-push: 
         username: $USERNAME
